Added update guide view,recorded bug fixes

--- a/guides/templates/edit_guide.html
+++ b/guides/templates/edit_guide.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-<h1>Add Guide</h1>
+<h1>Edit Guide</h1>
 
 <div class="form-group">
     <form id="guideForm" method="post" style="margin-top: 1.3em;">
