Added edit and add guide styling for all devices

--- a/guides/templates/guide_detail.html
+++ b/guides/templates/guide_detail.html
@@ -15,7 +15,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="d-flex flex-column align-items-center guide-info">
-            <h3 class="text-center">{{guide.trophy}}</h3>
+            <h3 class="text-center pt-3">{{guide.trophy}}</h3>
             <div class="col-12 col-md-8 border">
                 <p class="text-break p-3">{{guide.body}}</p>
                 <a href="#" class="pb-2 d-flex justify-content-center">{{guide.author}}</a>
