--- a/guides/templates/edit_guide.html
+++ b/guides/templates/edit_guide.html
@@ -2,14 +2,18 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-<h1>Edit Guide</h1>
+<h3 class="text-center text-lg-start ps-3">Edit Guide</h3>
+<div class="container-fluid">
+    <div class="row col-12">
+        <div class="form-group">
+            <form id="guideForm" method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button id="submitButton" type="submit" class="btn btn-success btn-lg">Submit</button>
+            </form>
+        </div>
 
-<div class="form-group">
-    <form id="guideForm" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
-    </form>
+    </div>
 </div>
 
 {% endblock %}
