Added all auth to project with templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 {% url 'home' as home_url %}
 {% url 'category' as category_url %}
 {% url 'game' as game_url %}
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -34,6 +37,22 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'game' %}">Games</a>
                         </li>
+
+                        {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
+                                href="{% url 'account_logout' %}">Logout</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+                                href="{% url 'account_signup' %}">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
+                                href="{% url 'account_login' %}">Login</a>
+                        </li>
+                        {% endif %}
                 </div>
             </div>
         </nav>
