Removed email,auth and added auth for guides,homepage

--- a/guides/templates/guide_detail.html
+++ b/guides/templates/guide_detail.html
@@ -29,10 +29,12 @@
             <div class="col-12 col-md-8 border">
                 <p class="text-break p-3">{{guide.body}}</p>
                 <a href="#" class="pb-2 d-flex justify-content-center">{{guide.author}}</a>
+                {% if user.is_authenticated and guide.author == user %}
                 <div class="guide-buttons d-flex align-items-center justify-content-between flex-column">
                     <a class="btn btn-success" href="{% url 'edit-guide' guide.pk %}">Edit guide</a>
-
+                    <a class="btn btn-danger" href="#">Delete Guide</a>
                 </div>
+                {% endif %}
                 <hr>
                 <div class="rate-buttons ps-2">
                     <button class="btn btn-primary">Like</button>
