Removed form field author, set the author in the view

--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -2,6 +2,14 @@
 {% load static %}
 
 {% block content %}
+{% if messages %}
+{% for message in messages %}
+<div class="text-center alert alert-{{ message.tags }}">
+    {{ message|safe }}
+</div>
+{% endfor %}
+{% endif %}
+
 <div class="container-fluid text-bg-warning p-3 heading-text">
     <div class="container text-center">
         {% if user.is_authenticated %}
