--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,4 +1,5 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
+
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock head_title %}
