--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,16 @@
 /* Generic styles */
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+main {
+    flex-grow: 1;
+}
+
+
 h1,h2,h3 {
     font-size: 20px;
 }
@@ -104,7 +115,8 @@ img{
     padding-right: 20px;
 }
 
-
-
+.footer {
+    margin-top: auto;
+}
 
 
