Added guides logic to show correct buttons,recorded bug fixes

--- a/guides/templates/guide_detail.html
+++ b/guides/templates/guide_detail.html
@@ -13,16 +13,22 @@
 
 <div class="container-fluid">
     <div class="row">
-        {% if not trophies.guides.all %}
+        {% if not trophies.guides.all and not user.is_authenticated %}
         <div class="col-12 pt-3 d-flex flex-column align-items-center">
             <p class="text-center">
                 Do you want to help out other fellow trophy hunters like yourself? Then simply click create guide and take your next step
-                in joining our ever growing community. 
+                in joining our ever growing community then just login to create a guide. 
             </p>
-            <a class="btn btn-success" href="{% url 'create-guide' trophies.pk %}">Create guide</a>
-            
+            <a class="btn btn-success" href="{% url 'account_login' %}">Login</a>
+            {% elif not trophies.guides.all and user.is_authenticated %}
+            <p class="text-center">
+                Do you want to help out other fellow trophy hunters like yourself? Then simply click create guide and take your next step
+                in joining our ever growing community
+            </p>
+            <a class="btn btn-success" href="{% url 'create-guide' trophies.pk %}">Create</a>
         </div>
-        {% else %}
+        {% endif %}
+        {% if trophies.guides.all %}
         {% for guide in game_guide %}
         <div class="d-flex flex-column align-items-center guide-info">
             <h3 class="text-center pt-3">{{guide.trophy}}</h3>
@@ -45,15 +51,23 @@
         {% endfor %}
         {% endif %}
 
-        {% if trophies.guides.all %}
+        {% if trophies.guides.all and user.is_authenticated %}
         <div class="col-12 pt-3 d-flex flex-column align-items-center">
             <p class="text-center">
                 Do you want to help out other fellow trophy hunters like yourself? Then simply click create guide and take your next step
                 in joining our ever growing community. 
             </p>
             <a class="btn btn-success" href="{% url 'create-guide' trophies.pk %}">Create guide</a>
-        </div>
         {% endif %}
+
+        {% if trophies.guides.all and not user.is_authenticated %}
+        <div class="col-12 pt-3 d-flex flex-column align-items-center">
+            <p class="text-center">
+                To create your own excellent guides like the ones above just simply login in below to help out other trophy hunters!
+            </p>
+            <a class="btn btn-success" href="{% url 'account_login' %}">Login</a>
+        {% endif %}
+
 
         
 
