Added error styling, recorded bug fixes

--- a/trophy_hunter/templates/trophy_hunter/400_csrf.html
+++ b/trophy_hunter/templates/trophy_hunter/400_csrf.html
@@ -5,12 +5,13 @@
 
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2">
-        <h1>400 Error</h1>
-        <p>no access</p>
+        <h1>400 Error Bad Request</h1>
+        <p>Sorry Trophy Hunter This page is not working currently, click the back button to return to the home page</p>
+        <p>If the problem continus contact the site owner</p>
         <div class="d-flex align-items-center">
-            <a href="{% url 'home' %}" class="btn btn-primary">Back</a>
+            <a href="{% url 'home' %}" class="btn btn-primary btn-lg">Back</a>
         </div>
-        
+
     </div>
 </div>
 
