--- a/trophy_hunter/templates/trophy_hunter/403_csrf.html
+++ b/trophy_hunter/templates/trophy_hunter/403_csrf.html
@@ -5,9 +5,9 @@
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2">
         <h1>403 Error Access Denied</h1>
-        <p>You do not have the required permissions to access this content</p>
+        <p>Sorry Trophy Hunter, You do not have the required permissions to access this content</p>
         <div class="d-flex align-items-center">
-            <a href="{% url 'home' %}" class="btn btn-primary">Back</a>
+            <a href="{% url 'home' %}" class="btn btn-primary btn-lg">Back</a>
         </div>
     </div>
 </div>
