--- a/trophy_hunter/templates/trophy_hunter/404_csrf.html
+++ b/trophy_hunter/templates/trophy_hunter/404_csrf.html
@@ -5,10 +5,10 @@
 
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2">
-        <h1>404 Error</h1>
-        <p>no access</p>
+        <h1>404 Error this page does not exist</h1>
+        <p>Sorry Trophy Hunter this page does not exist press the back button to return to the home page</p>
         <div class="d-flex align-items-center">
-            <a href="{% url 'home' %}" class="btn btn-primary">Back</a>
+            <a href="{% url 'home' %}" class="btn btn-primary btn-lg">Back</a>
         </div>
         
     </div>
