--- a/trophy_hunter/templates/trophy_hunter/500_csrf.html
+++ b/trophy_hunter/templates/trophy_hunter/500_csrf.html
@@ -5,12 +5,11 @@
 
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2">
-        <h1>500 Error</h1>
-        <p>no access</p>
+        <h1>Server Error 500 </h1>
+        <p>Sorry Trophy hunter this page could not be displayed something went wrong and we are working on it </p>
         <div class="d-flex align-items-center">
-            <a href="{% url 'home' %}" class="btn btn-primary">Back</a>
+            <a href="{% url 'home' %}" class="btn btn-primary btn-lg">Back</a>
         </div>
-        
     </div>
 </div>
 
