--- a/templates/base.html
+++ b/templates/base.html
@@ -11,16 +11,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Font Awesome link-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
+    <!--Bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Css Style sheet link-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <title>Last Trophy</title>
 </head>
 
 <body>
     <header>
+        <!--Navigation bar-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'home' %}">Last Trophy</a>
@@ -64,7 +68,7 @@
         {% endblock content %}
 
     </main>
-
+    <!--Footer Element-->
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-black">
             {% block copyright %}Made by Matthew Hughes for Educational purposes{% endblock copyright %}
@@ -98,6 +102,7 @@
         </ul>
 
     </footer>
+    <!--Javascript Bootstrap link-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
