--- a/guides/templates/add_guide.html
+++ b/guides/templates/add_guide.html
@@ -2,6 +2,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
+<!--Add Guide Element-->
 <h3 class="text-center text-lg-start ps-3">Add Guide</h3>
 <div class="container-fluid">
     <div class="row col-12">
