--- a/guides/templates/delete_guide.html
+++ b/guides/templates/delete_guide.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<!--Delete Guide Element-->
 <div class="container-fluid">
     <h3 class="text-center">Delete Guide</h3>
     <p class="text-center">Are you sure you want to delete guide {{guide.title}} this action can't be undone
