--- a/guides/templates/edit_guide.html
+++ b/guides/templates/edit_guide.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load crispy_forms_tags %}
-
+<!--Edit Guide Element-->
 <h3 class="text-center text-lg-start ps-3">Edit Guide</h3>
 <div class="container-fluid">
     <div class="row col-12">
