--- a/trophy_hunter/templates/trophy_hunter/403_csrf.html
+++ b/trophy_hunter/templates/trophy_hunter/403_csrf.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<!--403 Error Element-->
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2">
         <h1>403 Error Access Denied</h1>
