--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -9,9 +9,10 @@
 </div>
 {% endfor %}
 {% endif %}
-
+<!--Home Page Element-->
 <div class="container-fluid text-bg-warning p-3 heading-text">
     <div class="container text-center">
+        <!--Checking if the user is logged in-->
         {% if user.is_authenticated %}
         <div class="row">
             <p class="logged-in-open">Welcome to Last Trophy to get started click the game option in the navigation bar to view all the games
