--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<!--Guide Form Element-->
 <div class="container-fluid">
     <div class="row col-2 col-md-8 col-xl-12">
         <form method="GET" action="{% url 'game' %}" class="d-flex flex-column flex-lg-row genre-form">
@@ -11,6 +12,7 @@
     </div>
 </div>
 <hr>
+<!--Guide table results-->
 <div class="table-responsive p-2">
     <h3 class="genre-list">Game List</h3>
     <table class="table table-sm">
