--- a/trophy_hunter/templates/trophy_hunter/400_csrf.html
+++ b/trophy_hunter/templates/trophy_hunter/400_csrf.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-
+<!--400 error element-->
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2">
         <h1>400 Error Bad Request</h1>
