--- a/guides/templates/guide_detail.html
+++ b/guides/templates/guide_detail.html
@@ -10,6 +10,7 @@
 </div>
 {% endfor %}
 {% endif %}
+<!--Trophy Element-->
 <div class="container-fluid">
     <div class="row">
         <div class="pt-4 pb-2 d-flex flex-column align-items-md-center">
