Adjusted game detail styling for all screen sizes

--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -3,34 +3,37 @@
 
 {% block content %}
 <!--Game Detail Element-->
-<div class="row">
-  <div class="col-md-4">
-    <div class="game-heading">
-      <h3>{{game.title}}</h3>
+<div class="container-fluid">
+  <div class="row">
+    <div class="d-flex flex-column align-items-md-center">
+      <div class="border col-md-4 col-lg-">
+        <h3 class="text-center">{{game.title}}</h3>
+        {% if "placeholder" in game.featured_image.url %}
+        <img class="img-thumbnail" src="{% static 'static/images/elden-ring-cover.jpg' %}" alt="placeholder">
+        {% else %}
+        <img class="img-thumbnail" src=" {{ game.featured_image.url }}" alt="{{ game.title }}">
+        {% endif %}
+        <div class="game-info">
+          <p>
+            <i class="fa fa-solid fa-trophy"></i>{{game.trophy_count}}
+            <i class="fa fa-solid fa-clock"></i>{{game.hours}}
+            <i class="fa fa-solid fa-star"></i>{{game.rating}}
+          </p>
+        </div>
+      </div>
+      <div class="game-summary">
+        <p class="text-break">
+          Welcome to the {{game.title}} home page down below you will see all the trophies from this game below, to view
+          more
+          information about a specific trophy just click the trophy title.
+        </p>
+      </div>
     </div>
-  </div>
-  <div class="border col-md-4 col-lg-4">
-    {% if "placeholder" in game.featured_image.url %}
-    <img class="img-thumbnail" src="{% static 'static/images/elden-ring-cover.jpg' %}" alt="placeholder">
-    {% else %}
-    <img class="img-thumbnail" src=" {{ game.featured_image.url }}" alt="{{ game.title }}">
-    {% endif %}
-    <div class="game-info">
-      <p>
-        <i class="fa fa-solid fa-trophy"></i>{{game.trophy_count}}
-        <i class="fa fa-solid fa-clock"></i>{{game.hours}}
-        <i class="fa fa-solid fa-star"></i>{{game.rating}}
-      </p>
-    </div>
-  </div>
-  <div class="game-summary">
-    <p>
-      Welcome to the {{game.title}} home page down below you will see all the trophies from this game below, to view
-      more
-      information about a specific trophy just click the trophy title.
-    </p>
   </div>
 </div>
+
+
+
 
 <div class="row">
   <h3 class="d-flex flex-column align-items-md-center">Trophies</h3>
@@ -41,7 +44,7 @@
     <div class="trophy-name">
       <a href="{% url 'trophy-detail' trophy.slug %}" class="trophy-title"><strong>{{trophy.title}}</strong></a>
     </div>
-    <div class="col-md-4 col-lg-3 trophy-images">
+    <div class="col-md-4 col-lg-3 trophy-images border">
       {% if "placeholder" in trophy.featured_image.url %}
       <img class="image-size" width="20%" src="{% static 'static/images/elden-ring-cover.jpg' %}"
         alt="placeholder image">
