--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <!--Css Style sheet link-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <title>Last Trophy</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 </head>
 
 <body>
