Added meta search tags for application

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Font Awesome link-->
+    <meta name="description"
+        content="Last Trophy is a Trophy hunting application that allows users to create guides, edit guides and offer feedback to other users">
+    <meta name="keyword" content="Trophies, guides, games, achievements, video games, action, horror, fighting, platformers, racing, stealth">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <!--Bootstrap link-->
@@ -20,6 +23,7 @@
     <!--Css Style sheet link-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <title>Last Trophy</title>
+    <!--Favicon-->
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 </head>
 
