Added edit game, delete game on the front end for admin user

--- a/category/templates/edit_game.html
+++ b/category/templates/edit_game.html
@@ -2,8 +2,8 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-<!--Add Game Element-->
-<h3 class="text-center text-lg-start ps-3">Add Game</h3>
+<!--Edit Game Element-->
+<h3 class="text-center text-lg-start ps-3">Edit Game</h3>
 <div class="container-fluid">
     <div class="row col-12">
         <div class="form-group">
