--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -32,6 +32,11 @@
   </div>
 </div>
 
+{% if user.is_superuser %}
+<a href="{% url 'delete-game' game.slug %}">Delete Game</a>
+<a href="{% url 'edit-game' game.slug %}">Edit Game</a>
+{% endif %}
+
 <div class="row">
   <h3 class="d-flex flex-column align-items-md-center">Trophies</h3>
   <hr>
