Added button styling and restrictions in url for front end admin features

--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -40,8 +40,11 @@
     </table>
 
 </div>
+
 {% if user.is_superuser %}
-<a href="{% url 'add-game' %}">Create Game</a>
+<div class="d-flex flex-column align-items-center pb-2">
+    <a class="btn btn-primary" href="{% url 'add-game' %}">Create Game</a>
+  </div>
 {% endif %}
 
 {% endblock %}
