--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -33,8 +33,11 @@
 </div>
 
 {% if user.is_superuser %}
-<a href="{% url 'delete-game' game.slug %}">Delete Game</a>
-<a href="{% url 'edit-game' game.slug %}">Edit Game</a>
+<div class="d-flex flex-column align-items-center pb-2">
+  <a class="btn btn-primary" href="{% url 'edit-game' game.slug %}">Edit Game</a>
+  <a class="btn btn-danger" href="{% url 'delete-game' game.slug %}">Delete Game</a>
+</div>
+
 {% endif %}
 
 <div class="row">
