--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -36,6 +36,7 @@
 <div class="d-flex flex-column align-items-center pb-2">
   <a class="btn btn-primary" href="{% url 'edit-game' game.slug %}">Edit Game</a>
   <a class="btn btn-danger" href="{% url 'delete-game' game.slug %}">Delete Game</a>
+  <a href="{% url 'add-trophy' game.slug %}">Add Trophy</a>
 </div>
 
 {% endif %}
