--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -61,6 +61,12 @@
       <p class="d-none d-sm-block trophy-rarity">
         <i class="fa fa-solid fa-trophy"></i>{{trophy.rarity}}
       </p>
+      {% if user.is_superuser %}
+      <div class="d-flex flex-column align-items-center pb-2">
+        <a href="{% url 'edit-trophy' trophy.slug %}">Edit Trophy</a>
+      </div>
+
+      {% endif %}
 
     </div>
   </div>
