--- a/category/templates/edit_trophy.html
+++ b/category/templates/edit_trophy.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-<!--Edit Game Element-->
+<!--Edit Trophy Element-->
 <h3 class="text-center text-lg-start ps-3">Edit Trophy</h3>
 <div class="container-fluid">
     <div class="row col-12">
